[package]
name = "sp-authority-discovery"
version = "26.0.0"
authors.workspace = true
description = "Authority discovery primitives"
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { git = "https://github.com/paritytech/parity-scale-codec.git", tag = "parity-scale-codec-v3.6.1", package = "parity-scale-codec", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
sp-api = { path = "../api", default-features = false }
sp-application-crypto = { path = "../application-crypto", default-features = false }
sp-runtime = { path = "../runtime", default-features = false }
sp-std = { path = "../std", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-runtime/std",
	"sp-std/std",
]
serde = [
	"scale-info/serde",
	"sp-application-crypto/serde",
	"sp-runtime/serde",
]
