[package]
name = "sp-consensus-pow"
version = "0.32.0"
authors.workspace = true
description = "Primitives for Aura consensus"
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { git = "https://github.com/paritytech/parity-scale-codec.git", tag = "parity-scale-codec-v3.6.1", package = "parity-scale-codec", default-features = false, features = ["derive"] }
sp-api = { path = "../../api", default-features = false }
sp-core = { path = "../../core", default-features = false }
sp-runtime = { path = "../../runtime", default-features = false }
sp-std = { path = "../../std", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
